# openenclave

./: .gitattributes  .gitmodules  CMakeLists.txt  coverage.xml
.jenkins/: Jenkinsfile
.jenkins/pipelines/Azure/Linux/: Jenkinsfile
cmake/: add_enclave.cmake  enclave_cmake_wrappers.cmake  get_compiler_info.cmake  openenclave-config.cmake.in
common/: attest_plugin.c
common/crypto/openssl/: cert.c
common/edl/: fcntl.edl
common/sgx/: debugtsc.c  quote.c  rdtsc.S  rdtsc.asm  verifier.c
debugger/ptraceLib/: CMakeLists.txt
docs/DesignDocs/: TEECallsRefactoring.md
docs/GettingStartedDocs/Contributors/: CodeCoverage.md
enclave/: CMakeLists.txt  tls_cert.c
enclave/core/: CMakeLists.txt  calls.c  calls.h  debugmalloc.c  hostcalls.c  init_fini.c  time.c
enclave/core/sgx/: calls.c  exception.c  globals.c  reloc.c  switchlesscalls.c
enclave/crypto/: CMakeLists.txt
enclave/crypto/mbedtls/: CMakeLists.txt
enclave/crypto/openssl/: CMakeLists.txt  asn1.c  asn1.h  cert.c  cmac.c  crl.c  crl.h  ec.c  ec.h  fini.c  hmac.c  init.c  init.h  key.c  key.h  rsa.c  rsa.h
enclave/sgx/: attester.c
host/: CMakeLists.txt  calls.c  calls.h
host/linux/: syscall.c  time.c
host/measure/: CMakeLists.txt
host/optee/linux/: enclave.c
host/sgx/: calls.c  create.c  elf.c  enclave.h  loadelf.c  switchless.c
host/sgx/linux/: exception.c
include/openenclave/: host.h
include/openenclave/attestation/: attester.h  verifier.h
include/openenclave/bits/: evidence.h
include/openenclave/corelibc/bits/: malloc.h
include/openenclave/edger8r/: enclave.h  host.h
include/openenclave/edl/: socket.edl
include/openenclave/internal/: calls.h  elf.h  load.h  module.h  time.h
include/openenclave/internal/syscall/: declarations.h  fd.h
include/openenclave/internal/syscall/sys/: socket.h
libc/: CMakeLists.txt  free.c  malloc.c  posix_memalign.c  pthread.c  secure_getenv.c  syscalls.c
samples/: CMakeLists.txt  test-samples.cmake
samples/attestation/: CMakeLists.txt
samples/attested_tls/: README.md
samples/data-sealing/: CMakeLists.txt
samples/debugmalloc/: CMakeLists.txt
samples/file-encryptor/: CMakeLists.txt
samples/helloworld/: CMakeLists.txt
samples/log_callback/: CMakeLists.txt
samples/pluggable_allocator/: CMakeLists.txt
samples/switchless/: CMakeLists.txt
scripts/: .check-license.ignore
scripts/ansible/: requirements.txt
scripts/ansible/roles/linux/openenclave/tasks/: code-coverage-setup.yml
scripts/ansible/roles/linux/openenclave/tasks/ubuntu/: code-coverage.yml  packages-install.yml
scripts/ansible/roles/linux/openenclave/vars/: main.yml
scripts/ansible/roles/linux/openenclave/vars/ubuntu/: main.yml
syscall/: CMakeLists.txt  fcntl.c  socket.c  syscall.c
syscall/devices/hostepoll/: CMakeLists.txt
syscall/devices/hostfs/: CMakeLists.txt  hostfs.c
syscall/devices/hostresolver/: CMakeLists.txt
syscall/devices/hostsock/: CMakeLists.txt  hostsock.c
tests/: CMakeLists.txt
tests/attestation_cert_apis/: tls.edl
tests/attestation_cert_apis/enc/: CMakeLists.txt  enc.cpp
tests/attestation_cert_apis/host/: host.cpp
tests/cmake_name_conflict/enc/: CMakeLists.txt
tests/cmake_name_conflict/host/: CMakeLists.txt
tests/code_coverage/: CMakeLists.txt  README.md  code_coverage.edl
tests/code_coverage/enc/: CMakeLists.txt  enc.c
tests/code_coverage/host/: CMakeLists.txt  host.c
tests/crypto/enclave/: CMakeLists.txt
tests/crypto/enclave/enc/: CMakeLists.txt  enc.c
tests/crypto_crls_cert_chains/: CMakeLists.txt
tests/crypto_crls_cert_chains/enc/: CMakeLists.txt
tests/crypto_crls_cert_chains/host/: host.cpp
tests/libc/: CMakeLists.txt
tests/libc/enc/: CMakeLists.txt  enc.c
tests/libcxx/: CMakeLists.txt
tests/libcxx/enc/: CMakeLists.txt  enc.cpp
tests/libcxx/host/: host.cpp
tests/libcxxrt/: CMakeLists.txt
tests/libcxxrt/enc/: CMakeLists.txt
tests/libunwind/enc/: CMakeLists.txt  enc.c
tests/mbed/enc/: CMakeLists.txt  enc.c
tests/module_loading/: commands.gdb
tests/module_loading/module/: module.c  module.h
tests/oeedger8r/edl/: deepcopy.edl
tests/oeedger8r/enc/: testdeepcopy.cpp
tests/oeedger8r/host/: testdeepcopy.cpp
tests/openssl/: CMakeLists.txt  openssl.edl  tests.broken
tests/openssl/enc/: CMakeLists.txt  enc.c
tests/openssl/host/: CMakeLists.txt  host.c  host.cpp
tests/openssl_test/: openssl_test.edl
tests/openssl_test/enc/: CMakeLists.txt  enc.c
tests/openssl_test/host/: CMakeLists.txt  host.c
tests/pf_gp_exceptions/: pf_gp_exceptions.edl
tests/pf_gp_exceptions/enc/: enc.c
tests/pf_gp_exceptions/host/: CMakeLists.txt  host.c
tests/scmml/: CMakeLists.txt  scmml.edl
tests/scmml/enc/: CMakeLists.txt  enc.c
tests/scmml/host/: CMakeLists.txt  host.c
tests/scmml/sm/: CMakeLists.txt  sm.c
tests/symcrypt_loading/: CMakeLists.txt
tests/symcrypt_loading/enc/: CMakeLists.txt  enc.cpp
tests/symcrypt_loading/enc/inc/: buildInfo.h  symcrypt.h  symcrypt_internal.h  symcrypt_low_level.h  symcrypt_no_sal.h  symcrypt_version.inc
tests/symcrypt_loading/host/: CMakeLists.txt  host.c
tests/syscall/: CMakeLists.txt
tests/thread_local/enc/: CMakeLists.txt
tests/tools/: CMakeLists.txt
tests/tools/oecert/: oecert.edl
tests/tools/oecert/enc/: CMakeLists.txt  enc.cpp
tests/tools/oecert/host/: CMakeLists.txt  evidence.cpp
tests/tools/oesign-engine/test-enclave/enclave/: CMakeLists.txt
tmp/: coverage.xml
tools/oecert/: oecert.edl
tools/oecert/enc/: CMakeLists.txt  enc.conf  enc.cpp
tools/oecert/host/: evidence.cpp  evidence.h  host.cpp
tools/oeedger8r/: CMakeLists.txt
tools/oeedger8r/src/: Crc32.ml  Crc32.mli  Emitter.ml  Headers.ml  Sources.ml
